--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "[![Actions Status](https://github.com/kutoline/backend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/kutoline/backend-project-44/actions)",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
