--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/kutoline/backend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/kutoline/backend-project-44/actions)",
-  "main": "index.js",
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js"
@@ -11,5 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Evgeniy Kutolin",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
