--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "[![Actions Status](https://github.com/kutoline/backend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/kutoline/backend-project-44/actions)",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
-  },
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
